log/build_2025-02-20_22-16-50/me495_yolo/stderr.log
  File "/home/catherine-maglione/yolo_backup/install/me495_yolo/lib/python3.12/site-packages/me495_yolo/square_mover.py", line 148
    self.get_logger().info(f"🔄 Rotating {angle_diff:.2f}° at {twist.angular.z} rad/s
                           ^
SyntaxError: unterminated f-string literal (detected at line 148)

